Fri Jun  8 15:34:02 CEST 2001  Robin Ericsson  <robin@noname4us.com>

	* src/init.c: Added window_color() to the menu again.

Thu May 31 22:05:49 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/net.c: Fixed bug #408834.

Thu May 31 21:15:27 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/profiles.c: Added, going to contain the new connection wizard
	
	* src/gnome-mud.h, src/init.c: Added new function-def and added
	new wizard to menu.

Thu Mar  8 04:18:57 CET 2001  Jordi Mallach  <jordi@sindominio.net>
	* po/fr.po: added missing "\n".

Tue Feb 20 04:10:49 CET 2001  Jordi Mallach  <jordi@sindominio.net>

	* configure.in, po/fr.po: added French translation from Martin
	Quinson.

Wed Jan 24 20:59:31 CET 2001  Robin Ericsson  <lobbin@localhost.nu>

	* configure.in, src/Makefile.am, version.h.in, applied
	patch from CrezyboY.

	* src/data.c: Small patch sent in from message board.

Sat Jan 20 02:29:40 2001  Robin Ericsson  <lobbin@localhost.nu>

	* Makefile.am, amcl-lsm, gnome-mud.lsm: renamed amcl.lsm 
	to gnome-mud.lsm.
	
	* NEWS, PLUGIN.API, README, autogen.sh, configure.in: 
	Changed AMCL to GNOME-Mud.

	* src/amcl.c, src/gnome-mud.c, Makefile.am: amcl.c renamed
	to gnome-mud.c

Sun Jan 14 22:50:09 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/*: Renamed amcl.h to gnome-mud.h, and tried to change
	AMCL into GNOME-Mud where I could.

	* po/*.po: make update-po

Thu Jan  1 17:08:21 2001  Jordi Mallach  <jordi@sindominio.net>
	* amcl.1, gnome-mud.1, Makefile.am: renamed the fake manpage
	and added the real one to the distribution.

Thu Dec 28 23:30:43 2000  Robin Ericsson  <robin@noname4us.com>

	* src/amcl.c [main]: save_plugins() removed.
	* src/init.c: Removed some global variables.
	[about_window]: Added a gnome_href widget to gnome-mud
	homepage.
	[do_close]: Fix for not closing main_window.
	* src/modules.c [do_plugin_information]: rebuild the
	window, and saves for plugins now uses gnome_config_*.
	[save_plugins]: removed.