@@ -1,3 +1,8 @@
+Fri Jun  8 17:15:58 CEST 2001  Robin Ericsson  <robin@noname4us.com>
+
+	* src/color.c [(load|save)_colors): Removed old code for saving
+	to file, and changed to use gnome_config_(get|set)_vector.
+
 Fri Jun  8 15:34:02 CEST 2001  Robin Ericsson  <robin@noname4us.com>
 
 	* src/init.c: Added window_color() to the menu again.
